# Pearls

./: .gitignore  LICENSE  Pearls.cabal  PearlsRevisited.cabal  README.md  profiling.sh
src/: Main.hs  Pearl1.hs  Pearl2.hs
